package pe.plazavea.perecibles.enums;

public enum TipoMovimiento {
    INGRESO,
    RETIRO,
    AJUSTE,
    REMATE,
    DONACION
}
