package pe.plazavea.perecibles.enums;

public enum TipoReporte {
    STOCK,
    VENCIDOS,
    PROXIMOS_VENCER,
    MERMAS
}
